--- a/css/style.css
+++ b/css/style.css
@@ -219,6 +219,42 @@ section.information .container-info > input:hover{
     padding: 10px 42px;
 }
 
+footer{
+    width: 100%;
+    height: 200px;
+    background-color: #1282de;
+}
+
+footer .end-page{
+    max-width: 1400px;
+    display: flex;
+    justify-content: end;
+}
+
+footer .end-page h2{
+    font-size: 15px;
+    margin-top: 175px;
+    margin-left: 300px;
+    
+}
+
+footer .end-page img.img-one{
+    width: 12em;
+    height: 8em;
+    margin-top: 30px;
+    
+}
+
+footer .end-page img.img-two{
+    width: 27em;
+    height: 7em;
+    margin-top: 60px;
+    margin-left: 30px;
+    
+}
+
+
+
 
 @media screen and (max-width: 1650px){
     section.information .container-info h2{
@@ -380,6 +416,30 @@ section.option .option-colors input[type=image]:hover{
     }
     section.option .option-colors input{
         margin-right: 0px;
+    }
+
+
+    footer .end-page h2{
+        font-size: 11px;
+        margin-top: auto;
+        margin-left: auto;
+        
+        
+    }
+    
+    footer .end-page img.img-one{
+        width: 10em;
+        height: 8em;
+        margin-left: 50px;
+        
+        
+    }
+    
+    footer .end-page img.img-two{
+        width: 25em;
+        height: 7em;
+        margin-left: 50px;
+        
     }
 }
 
@@ -610,6 +670,22 @@ section.option .option-colors input[type=image]:hover{
                 height: 28px;
                 margin: 0 10px;
                 
+        }
+
+        footer .end-page img.img-one{
+            width: 9em;
+            height: 8em;
+            position: absolute;
+            right: 100px;
+            
+            
+        }
+        
+        footer .end-page img.img-two{
+            width: 23em;
+            height: 7em;
+            margin-left: 500px;
+            
         }
 
 }
